--- a/css/site_admin.css
+++ b/css/site_admin.css
@@ -1,24 +1,72 @@
-html {
-background: #FFFFFF;
-}
-
 body {
-font-size: 90%;
-font-family: Arial, Helvetica, sans-serif;
-line-height: 1.8em;
-text-align: center;
+font-size: 13px;
+font-family: Verdana, Arial, Helvetica, sans-serif;
 }
 
-ul, li, img, body, html {
-margin: 0; padding 0;
+ul, li, img, body, html, p, h1, form, button {
+margin: 0; 
+padding: 0;
+border: 0;
 }
 
 a {
 color: #000000;
 }
 
+button {
+background-color: #CCCCCC;
+color: black;
+padding: 5px;
+margin-right: 10px;
+margin-top: 15px;
+}
+
+button:hover {
+background-color: #666666;
+color: white;
+}
+
+.spacer {
+clear: both; 
+height: 1px;
+}
+
+.message {
+padding: 15px 10px 15px 50px;
+margin: 25px 25px 0 25px;
+color: #222;
+background-color: #EEE;
+background-repeat: no-repeat;
+background-position: 10px center;
+border: 1px solid #DDD;
+}
+
+.error {
+color: #D8000C;
+background-color: #FFBABA;
+background-image: url('../images/site_admin/error_icon.png');
+border-color: #D8000C;
+}
+
+.warning {
+color: #9F6000;
+background-color: #FEEFB3;
+background-image: url('../images/site_admin/warning_icon.png');
+border-color: #9F6000;
+}
+
+.success {
+color: #4F8A10;
+background-color: #DFF2BF;
+background-image: url('../images/site_admin/success_icon.png');
+border-color: #4F8A10;
+}
+
 #container {
-text-align: left;
+width: 1000px;
+margin: auto;
+overflow: hidden;
+border: 1px solid #D0D0D0;
 }
 
 #container ul,
@@ -27,7 +75,7 @@ list-style-type: none;
 }
 
 #header {
-background: url(../images/site_admin/header_gradient.png) repeat-x;
+background: url('../images/site_admin/header_gradient.png') repeat-x;
 position: relative;
 padding: 0;
 overflow: hidden;
@@ -120,22 +168,22 @@ background-color: #B0B0B0;
 width: 100%;
 background: #E8E8E8;
 padding-left: 25px;
+height: 25px;
 }
 
 #content {
-width: 1000px;
-margin-left: 25px;
+width: 95%;
+margin-left: 20px;
 }
 
 #content li {
-background-color: #F0F0F0;
+/*background-color: #F0F0F0;*/
 margin: 15px;
 padding: 15px;
-width: 600px;
 overflow: hidden;
-border: 1px solid #D0D0D0;
+/*border: 1px solid #D0D0D0;
 -moz-border-radius: 6px;
--webkit-border-radius: 6px;
+-webkit-border-radius: 6px;*/
 }
 
 #content img {
@@ -147,3 +195,51 @@ float: left;
 padding-left: 10px;
 }
 
+#add_new_user_link {
+float: right;
+padding-bottom: 20px;
+}
+
+/* --- Users & Group >> Users >> Add New User Form ---*/
+.outter {
+background-color:#F5FAF9;
+}
+
+.note {
+font-family: tahoma;
+font-size: 12px;
+color: #333333;
+border: 1px #55917A solid;
+}
+
+.input {
+font-family: Verdana, Arial, Helvetica, sans-serif;
+font-weight: normal;
+font-size: 13px;
+border: 1px #A7BEB7 solid;
+}
+
+.text {
+font-family: tahoma;
+font-size: 12px;
+color: #617E78;
+font-weight: bold;
+}
+
+.formHeading {
+font-family: Arial, Helvetica, sans-serif;
+font-size: 18px;
+color: #55917A;
+padding: 0;
+}
+/*----------------------------------------------------*/
+
+#footer {
+text-align: center;
+margin-top: 50px;
+background: url(../images/site_admin/header_gradient.png) repeat-x;
+height: 30px;
+color: #FFFFFF;
+padding: 20px;
+width: 100%;
+}
