Updated db to include fields classPrice and classDesc in the class table. Also renamed some files for the admin panel.

--- a/css/site_admin.css
+++ b/css/site_admin.css
@@ -196,7 +196,7 @@ float: left;
 padding-left: 10px;
 }
 
-#add_new_user_link {
+#add_new_user_link , #add_new_course_link {
 float: right;
 padding-bottom: 20px;
 }
