--- a/css/site_admin.css
+++ b/css/site_admin.css
@@ -26,6 +26,10 @@ background-color: #666666;
 color: white;
 }
 
+.red {
+color: red;
+}
+
 .spacer {
 clear: both; 
 height: 1px;
@@ -89,11 +93,16 @@ margin: 0;
 padding: 20px 0 25px 20px;
 }
 
-#header a {
+#header #logout_link {
 color: #FFFFFF;
 float: right;
 margin-right: 15px;
 }
+
+#header a {
+color: #FFFFFF;
+}
+
 
 li.headlink a {
 text-decoration: none;
