Added ability to create a new course in the admin panel.

--- a/css/demo_table.css
+++ b/css/demo_table.css
@@ -152,6 +152,15 @@ table.display td.center {
 	background: url('../images/sort_both.jpg') no-repeat center right;
 }
 
+.sorting_asc_disabled {
+	background: url('../images/sort_asc_disabled.jpg') no-repeat center right;
+}
+
+.sorting_desc_disabled {
+	background: url('../images/sort_desc_disabled.jpg') no-repeat center right;
+}
+
+
 
 
 
@@ -159,16 +168,51 @@ table.display td.center {
  * DataTables row classes
  */
 table.display tr.odd.gradeA {
-	background-color: #A23BEC;
+	background-color: #ddffdd;
 }
 
 table.display tr.even.gradeA {
-	background-color: #A23BEC;
+	background-color: #eeffee;
+}
+
+
+
+
+table.display tr.odd.gradeA {
+	background-color: #ddffdd;
+}
+
+table.display tr.even.gradeA {
+	background-color: #eeffee;
+}
+
+table.display tr.odd.gradeC {
+	background-color: #ddddff;
+}
+
+table.display tr.even.gradeC {
+	background-color: #eeeeff;
+}
+
+table.display tr.odd.gradeX {
+	background-color: #ffdddd;
+}
+
+table.display tr.even.gradeX {
+	background-color: #ffeeee;
+}
+
+table.display tr.odd.gradeU {
+	background-color: #ddd;
+}
+
+table.display tr.even.gradeU {
+	background-color: #eee;
 }
 
 
 tr.odd {
-	background-color: #98AFC7;
+	background-color: #E2E4FF;
 }
 
 tr.even {
