--- a/css/student.css
+++ b/css/student.css
@@ -196,7 +196,7 @@ width: 100%;
 	margin-right: 3em;
 }
 
-#user_courses, #lecture_notes {
+#user_courses, #lecture_notes, #user_lectures {
 	width: 100%;
 	margin-right: 3em;
 }
