Updated jquery css as well as began initial edit courses page.

--- a/css/site_admin.css
+++ b/css/site_admin.css
@@ -243,6 +243,9 @@ color: #55917A;
 padding: 0;
 }
 /*----------------------------------------------------*/
+#admin_table {
+width: 771px;
+}
 
 #footer {
 text-align: center;
