--- a/trunk/css/site_admin.css
+++ b/trunk/css/site_admin.css
@@ -243,6 +243,9 @@ color: #55917A;
 padding: 0;
 }
 /*----------------------------------------------------*/
+#admin_table {
+width: 771px;
+}
 
 #footer {
 text-align: center;
