--- a/trunk/css/main.css
+++ b/trunk/css/main.css
@@ -13,15 +13,6 @@ ul, li, img, body, html {
 margin: 0; padding 0;
 }
 
-a {
-text-decoration: none;
-color: #2274da;
-}
-
-a:hover {
-text-decoration: underline;
-}
-
 h2 {
 background: #2274da;
 color: #ffffff;
@@ -95,11 +86,6 @@ overflow: hidden;
 height: 80px;
 }
 
-#navigation li {
-float: left;
-padding-left: 60px;
-}
-
 #main div {
 overflow: hidden;
 }
@@ -160,4 +146,40 @@ border: 2px solid #d0d0d0;
 -webkit-border-radius: 10px;
 text-align: center;
 background: url(../images/module_gradient.png) repeat-x;
+}
+
+
+a.tab, a.activetab {
+  float: left;
+  background-color: #FFFFFF;
+  border: 1px solid #000000;
+  border-bottom-width: 0px;
+  border-color: #c2c2c2 #c2c2c2 #c2c2c2 #c2c2c2;
+  -moz-border-radius: .75em .75em 0em 0em;
+  border-radius-topleft: .75em;
+  border-radius-topright: .75em;
+  padding: 4px 1em 4px 1em;
+  position: relative;
+  text-decoration: none;
+  top: 3px;
+  font-weight: normal;
+  font-size: 14pt;
+  z-index: 100;
+  background: #C6C6C6 url(../images/tab_gradient.png) repeat-x;
+}
+
+a.tab, a.tab:visited {
+  color: #000000;
+}
+
+a.tab:hover {
+  background: #418fef;
+  border-color: #418fef #418fef #418fef #418fef;
+  color: #ffe0ff;
+}
+
+a.activetab{
+  background: #418fef;
+  border-color: #418fef #418fef #418fef #418fef;
+  color: #ffe0ff;
 }
