--- a/trunk/css/main.css
+++ b/trunk/css/main.css
@@ -93,8 +93,7 @@ overflow: hidden;
 margin-bottom: 2em;
 }
 
-#level1 div,
-#level2 div {
+#level1 div, #level2 div, #about_level1 div, #qbank_level1 div{
 
 border: 2px solid #d0d0d0;
 -moz-border-radius: 10px;
@@ -110,8 +109,7 @@ float: left;
 width: 45%;
 }
 
-#level1 div p, 
-#level2 div p {
+#level1 div p, #level2 div p, #about_level1 div p, #qbank_level1 div p {
 margin-top: .3em;
 padding: .5em .5em;
 text-align: left;
