I changed the add subscription method. If you add a sub to someone that has a sub in course, it just extends it. So I'm going to allow the admin to add a sub to anyone that isnt an admin. You can mass edit the subscriptions now, though there is no error checking. I couldnt figure out an easy way to edit a single sub through clicking a link, so took it out.

--- a/css/site_admin.css
+++ b/css/site_admin.css
@@ -220,6 +220,12 @@ font-size: 18px;
 color: #55917A;
 padding: 0;
 }
+
+.ui-datepicker
+{
+z-index: 1050; /* must be > than popup editor (1002) */
+}
+
 /*----------------------------------------------------*/
 
 #footer {
