--- a/css/site_admin.css
+++ b/css/site_admin.css
@@ -246,6 +246,10 @@ padding: 0;
 z-index: 1050; /* must be > than popup editor (1002) */
 }
 
+#testTable{
+	display:none;
+}
+
 /*----------------------------------------------------*/
 
 #footer {
