--- a/css/main.css
+++ b/css/main.css
@@ -64,7 +64,7 @@ right: 0em;
 
 #banner {
 height: 162px;
-margin: 0 0 30px 0;
+margin: 0 0 15px 0;
 border: 1px solid #d1d1d1;
 -moz-border-radius: 10px;
 -webkit-border-radius: 10px;
@@ -101,7 +101,7 @@ overflow: hidden;
 border: 2px solid #d0d0d0;
 -moz-border-radius: 10px;
 -webkit-border-radius: 10px;
-padding: .5em .5em;
+/*padding: .5em .5em;*/
 background: #FFFFFF url(../images/module_gradient.png) repeat-x;
 
 }
@@ -142,7 +142,7 @@ font-size: 13pt;
 border: 1px solid #2470db;
 -moz-border-radius: 10px;
 -webkit-border-radius: 10px;
-padding: 0px 10px 2px 10px;
+padding: 0px 1px 2px 1px;
 }
 
 #footer {
@@ -197,7 +197,7 @@ div.tabMain {
   padding: 1em;
   position: relative;
   z-index: 101;
-  margin-bottom: 2em;
+  margin-bottom: 1em;
 }
 
 div.navBar {
