updating the login bar to be smaller; has all the login information on one line. also put a little space between "first, previous, next" buttons on tables (jquery.dataTables.min.js) deleted unnecessary text in forgotPassword.php, register.php, and footer.php

--- a/css/main.css
+++ b/css/main.css
@@ -26,6 +26,14 @@ border: 1px solid #2274da;
 -webkit-border-radius: 6px;
 }
 
+h3 {
+color: #ffffff;
+margin: 0;
+text-align: left;
+font-weight: normal;
+font-size: 13pt;
+}
+
 #container {
 text-align: left;
 width: 850px;
