--- a/trunk/application/views/moreInfo.html
+++ b/trunk/application/views/moreInfo.html
@@ -1,9 +1,7 @@
 <html>
 <header>
 </header>
-<body>
-	
-Test
-	
+<body marginwidth="0" marginheight="0" bgcolor="rgb(38,38,38)">
+	<embed width="100%" height="100%" name="plugin" src="syllabus/sampleSyllabus.pdf" type="application/pdf">
 </body>
 </html>
